--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "xehw"
+name = "eframe_template"
 version = "0.1.0"
-authors = ["rivo <db05@bk.ru>"]
-edition = "2018"
+authors = ["1"]
+edition = "2021"
+rust-version = "1.56"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -10,19 +11,23 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-eframe = "0.10.0" # Gives us egui, epi and web+native backends
+eframe = "0.17.0" # Gives us egui, epi and web+native backends
+
 serde = { version = "1", features = ["derive"], optional = true }
 
-[dependencies.xeh]
-path = "../xeh"
-default-features = false
+xeh = { path = "../xeh", features = [], default-features = false } # features = ["mmap"]
+
+rfd = "0.4.4"
 
 [features]
 default = []
-http = ["eframe/http"] # Enable if you want to do http requests
-persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
+#persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
 
 [profile.release]
+opt-level = 2 # fast and small wasm
+
+[profile.dev]
+debug = false
 opt-level = 2 # fast and small wasm
 
 [patch.crates-io]
@@ -31,4 +36,9 @@ opt-level = 2 # fast and small wasm
 # eframe = { git = "https://github.com/emilk/egui", branch = "master" }
 
 # If you fork https://github.com/emilk/egui you can test with:
-# eframe = { path = "../egui/eframe", features = [] }
+# eframe = { path = "../egui/eframe" }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1.6"
+tracing-wasm = "0.2"
+wasm-bindgen-futures = "0.4.19"
