add std::Instant workaround

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,4 @@ opt-level = 2 # fast and small wasm
 console_error_panic_hook = "0.1.6"
 tracing-wasm = "0.2"
 wasm-bindgen-futures = "0.4.19"
+instant = { version = "0.1.12", features = ["wasm-bindgen"] }
