--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,17 +11,15 @@ rust-version = "1.56"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-eframe = "0.17.0" # Gives us egui, epi and web+native backends
-
+egui = "0.17.0"
+eframe = { version = "0.17.0", features = ["persistence"] }
 serde = { version = "1", features = ["derive"], optional = true }
-
 xeh = { path = "../xeh", features = [], default-features = false } # features = ["mmap"]
-
 rfd = "0.4.4"
 
 [features]
-default = []
-#persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
+default = ["persistence"]
+persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
 
 [profile.release]
 opt-level = 2 # fast and small wasm
@@ -29,15 +27,16 @@ opt-level = 2 # fast and small wasm
 [profile.dev]
 debug = false
 opt-level = 2 # fast and small wasm
-
 [patch.crates-io]
 
-# If you want to use the bleeding edge version of `egui`:
-# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
-
 # If you fork https://github.com/emilk/egui you can test with:
-# eframe = { path = "../egui/eframe" }
+eframe = { path = "../egui/eframe" }
 
+# native:
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tracing-subscriber = "0.3"
+
+# web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
 tracing-wasm = "0.2"
