--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ eframe = { version = "0.17.0", features = ["persistence"] }
 serde = { version = "1", features = ["derive"], optional = true }
 xeh = { path = "../xeh", features = [], default-features = false } # features = ["mmap"]
 rfd = "0.4.4"
+arcstr = "1.1.3"
 
 [features]
 default = ["persistence"]
