--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Egui Template PWA",
-    "short_name": "egui-template-pwa",
+    "name": "XEH PWA",
+    "short_name": "xeh-pwa",
     "icons": [{
       "src": "./icon-256.png",
         "sizes": "256x256",
