--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ crate-type = ["cdylib", "rlib"]
 egui = "0.17.0"
 eframe = { version = "0.17.0", features = ["persistence"] }
 serde = { version = "1", features = ["derive"], optional = true }
-xeh = { path = "../xeh", features = [], default-features = false } # features = ["mmap"]
+xeh = { path = "../xeh", features = ["calc_limit"], default-features = false } # features = ["mmap"]
 rfd = "0.8.2"
 arcstr = "1.1.3"
 
