--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,8 @@ name = "xeh_playground"
 version = "0.1.0"
 authors = ["1"]
 edition = "2021"
-rust-version = "1.56"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 
 [dependencies]
 egui = "0.30"
@@ -48,7 +46,6 @@ env_logger = "0.11"
 
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-console_error_panic_hook = "0.1.6"
-tracing-wasm = "0.2"
-wasm-bindgen-futures = "0.4.19"
 instant = { version = "0.1.12", features = ["wasm-bindgen"] }
+wasm-bindgen-futures = "0.4.50"
+web-sys = "0.3.70"
